--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>SNCF Sandwich Menu</title>
+    <link rel="stylesheet" href="menu.css">
+</head>
+<body>
+    <ul class="menu">
+        <li><a href="#">Home</a></li>
+        <li class="dropdown">
+            <a href="#">Sandwich ▾</a>
+            <ul class="submenu">
+                <li><a href="#">Ham & Cheese</a></li>
+                <li><a href="#">Turkey</a></li>
+                <li><a href="#">Veggie</a></li>
+            </ul>
+        </li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+</body>
+</html>
