--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Parallax Minimal</title>
+  <link rel="stylesheet" href="parallax.css">
+</head>
+<body>
 
+  <!-- Section 1 -->
+  <div class="parallax section1">
+    <div class="caption">
+      <span>First Section</span>
+    </div>
+  </div>
+
+  <!-- Text block -->
+  <div class="text-block">
+    <h2>This is the middle block</h2>
+  </div>
+
+  <!-- Section 2 -->
+  <div class="parallax section2">
+    <div class="caption">
+      <span>Second Section</span>
+    </div>
+  </div>
+
+</body>
+</html>
