--- a/cell03/ex00/backgroound.html
+++ b/cell03/ex00/backgroound.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Change Background</title>
+    <link rel="stylesheet" href="background.css">
+</head>
+<body>
+    <button onclick="changeColor()">Change Background</button>
+    <script src="background.js"></script>
+</body>
+</html>
