--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>To do or not to do</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 50px;
+    }
+    #ft_list {
+      margin-top: 20px;
+      display: flex;
+      flex-direction: column-reverse; /* ทำให้ element ใหม่อยู่ด้านบน */
+      align-items: center;
+    }
+    #ft_list div {
+      background: lightblue;
+      padding: 10px 20px;
+      margin: 5px 0;
+      border-radius: 5px;
+      cursor: pointer;
+      width: fit-content;
+    }
+    #ft_list div:hover {
+      background: deepskyblue;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <h1>To Do List</h1>
+  <button id="newBtn">New</button>
+  <div id="ft_list"></div>
 
+  <script src="todo.js"></script>
+</body>
+</html>
