--- a/ruch/Mean.html
+++ b/ruch/Mean.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>job</title>
 </head>
-<body id="job1">
-    hello
+<body>
+    <div class="row">
+        <div class="col">name</div>
+        <div class="col">job</div>
+        <div class="col">person</div>8
+    </div>
     <img src="" alt="">
+    <a href=""><img src="facebook.jpg" width="20px" /></a>
+    <a href="port.html"><button>back</button></a>
 </body>
 </html>
