--- a/ruch/port.html
+++ b/ruch/port.html
@@ -17,24 +17,14 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="Mean.html" role="button"  ">
             Mean
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="job.html">job</a></li>
-            <li><a class="dropdown-item" href="#">photo</a></li>
-            <li><a class="dropdown-item" href="#">skill</a></li>
-          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="Pat.html" role="button" >
             Pat
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
         </li>
     </ul>
     </div>
