--- a/ruch/port.html
+++ b/ruch/port.html
@@ -1,34 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <title>Port</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      scroll-behavior: smooth;
+      background: linear-gradient(135deg, #74ebd5 0%, #9face6 100%);
+    }
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: #fff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 15px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 1000;
+    }
+    .navbar a {
+      text-decoration: none;
+      margin-left: 20px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .nav-links {
+      position: absolute;
+      left: 92%;
+    }
+    .navbar a:hover {
+      color: #007BFF;
+    }
+    section {
+      padding: 100px 20px;
+    }
+    .hero {
+      color: white;
+      text-align: center;
+      padding: 120px 20px;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .about {
+      text-align: center;
+      background: #f9f9f9;
+    }
+    .about h2 {
+      margin-bottom: 40px;
+      font-size: 2rem;
+    }
+    .profile-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      max-width: 320px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s;
+      cursor: pointer;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card img {
+      border-radius: 12px;
+      margin-bottom: 15px;
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+    }
+    .card h4 {
+      margin: 10px 0;
+      color: #007BFF;
+    }
+    .card p {
+      margin: 5px 0;
+    }
+    .details {
+      display: none;
+      text-align: left;
+      margin-top: 15px;
+    }
+    .details h4 {
+      margin-top: 10px;
+      color: #333;
+    }
+    .contact a {
+      margin: 0 8px;
+      font-size: 1.5rem;
+      text-decoration: none;
+      color: #007BFF;
+    }
+  </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Portforio</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="Mean.html" role="button"  ">
-            Mean
-          </a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="Pat.html" role="button" >
-            Pat
-          </a>
-        </li>
-    </ul>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo"><a href="#hero">Portfolio</a></div>
+    <div class="nav-links">
+      <a  href="Pat.html">Pat</a>
+      <a  href="Mean.html">Mean</a>
     </div>
-  </div>
-</nav>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="hero" class="hero">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Explore profiles and learn more about us.</p>
+  </section>
+
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <div class="profile-container">
+
+      <!-- Mean -->
+      <div class="card">
+        <a href="Mean.html">
+          <img src="Mean.webp" alt="Mean">
+        </a>
+        <h4>Mean</h4>
+        <p><strong>Age:</strong> 18</p>
+      </div>
+
+      <!-- Pat -->
+      <div class="card">
+        <a href="Pat.html">
+          <img src="Pat.webp" alt="Pat">
+        </a>
+        <h4>Pat</h4>
+        <p><strong>Age:</strong> 18</p>
+      </div>
+
+    </div>
+  </section>
 </body>
+
 </html>
