--- a/rush/Pat.html
+++ b/rush/Pat.html
@@ -54,8 +54,8 @@
       <p>Business Owner</p>
       <div class="contact">
         <a href="https://instagram.com" target="_blank"><img src="social.png"></a>
-        <a href="https://github.com" target="_blank"><img src="facebook.png"></a>
-        <a href="https://linkedin.com" target="_blank"><img src="github.png" alt=""></a>
+        <a href="https://github.com" target="_blank"><img src="github.png"></a>
+        <a href="https://linkedin.com" target="_blank"><img src="facebook.png" alt=""></a>
       </div>
     </div>
 
